day4/cloudformation-apache-web-server.yaml
AWSTemplateFormatVersion: 2010-09-09

Description: >
  This Cloudformation Template creates Web Server on EC2 Instance. 
  This will run on Amazon Linux 2 (ami-026dea5602e368e96) EC2 Instance with
  custom security group allowing SSH connections from anywhere on port 22.
Parameters:
  KeyPairName:
    Description: Enter the name of your Key Pair for SSH connections.
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Must one of the existing EC2 KeyPair

Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH for WebServer
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  WebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-09d95fab7fff3776c
      InstanceType: t2.micro
      KeyName: !Ref KeyPairName
      SecurityGroupIds:
        - !GetAtt WebServerSecurityGroup.GroupId
      Tags:                
        -                        
          Key: Name
          Value: !Sub WebServer of ${AWS::StackName}   
      UserData:
        Fn::Base64: |
          #!/bin/bash
          yun update -y
          yum install -y httpd
          systemctl start httpd
          systemctl enable httpd
                   
Outputs:
  WebsiteURL:
    Description: WebServer DNS Name
    Value: !Sub 
      - ${PublicAddress}
      - PublicAddress: !GetAtt WebServer.PublicDnsName
